1st commit coming in hot, pay attention to gitignore there is much to discard from VS2010

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,27 @@
 *.exe
 *.out
 *.app
+*.exp
+
+# Visual Studio 2010
+*.vcxproj
+*.vcxproj.filters
+*.vcxproj.user
+*.opensdf
+*.sdf
+*.sln
+*.suo
+*.pdb
+*.ilk
+*.pch
+*.idb
+*.ipch
+
+# Logs
+*.tlog
+*.rc
+*.rc2
+*.res
+*.lastbuildstate
+*.unsuccessfulbuild
+*.log
