single conduit now sends dib to HMD render. unlocked wglMakeCurrent secrets

--- a/VRaptor/VRaptor.vcxproj
+++ b/VRaptor/VRaptor.vcxproj
@@ -289,12 +289,10 @@
     </Midl>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cmdInitVR.cpp" />
     <ClCompile Include="cmdVRaptor.cpp" />
     <ClCompile Include="cmdVRCreateViewSample.cpp" />
     <ClCompile Include="cmdVRHMDDebug.cpp" />
-    <ClCompile Include="cmdVRHMDDestroy.cpp" />
-    <ClCompile Include="cmdVRHmdInit.cpp" />
-    <ClCompile Include="cmdVRHMDPrintUpdate.cpp" />
     <ClCompile Include="cmdVRHMDViewsUpdate.cpp" />
     <ClCompile Include="CVRConduit.cpp" />
     <ClCompile Include="stdafx.cpp">
