--- a/VRaptor/VRaptor.vcxproj.filters
+++ b/VRaptor/VRaptor.vcxproj.filters
@@ -30,22 +30,16 @@
     <ClCompile Include="cmdVRCreateViewSample.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cmdVRHmdInit.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cmdVRHMDDestroy.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="cmdVRHMDDebug.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="cmdVRHMDPrintUpdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cmdVRHMDViewsUpdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CVRConduit.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cmdInitVR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
