shipping dibs through to ovr on a constant loop now. going to build out stereoscopic and proper orientations

--- a/VRaptor/VRaptor.vcxproj.filters
+++ b/VRaptor/VRaptor.vcxproj.filters
@@ -36,10 +36,13 @@
     <ClCompile Include="cmdVRHMDViewsUpdate.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="CVRConduit.cpp">
+    <ClCompile Include="cmdInitVR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cmdInitVR.cpp">
+    <ClCompile Include="CVRConduitUpdate.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CVRConduitRender.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
