--- a/VRaptor/VRaptor.vcxproj
+++ b/VRaptor/VRaptor.vcxproj
@@ -294,7 +294,8 @@
     <ClCompile Include="cmdVRCreateViewSample.cpp" />
     <ClCompile Include="cmdVRHMDDebug.cpp" />
     <ClCompile Include="cmdVRHMDViewsUpdate.cpp" />
-    <ClCompile Include="CVRConduit.cpp" />
+    <ClCompile Include="CVRConduitRender.cpp" />
+    <ClCompile Include="CVRConduitUpdate.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
