--- a/VRaptor/VRaptor.vcxproj.filters
+++ b/VRaptor/VRaptor.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClCompile Include="CRhinoIdleWatcher.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="rhinoEscapeKey.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cmdLaunchVR.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="rhinoGetPoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VRaptorApp.h">
@@ -63,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="SOIL\Simple OpenGL Image Library\src\SOIL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="rhinoEscapeKey.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
